force-app/main/default/objects/Tarea_aprobacion__c/Tarea_aprobacion__c.object-meta.xml
<CustomObject>
    <label>Tarea de aprobación</label>
    <nameField>
        <label>Nombre de Tarea de aprobación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tareas de aprobación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>