force-app/main/default/objects/Tarea_aprobacion__c/fields/C_digo_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Objetivo__c</fullName>
    <label>Código Objetivo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>