force-app/main/default/objects/Tarea_aprobacion__c/fields/C_digo_Portafirmas__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Portafirmas__c</fullName>
    <label>Código Portafirmas</label>
    <length>64</length>
    <type>Text</type>
</CustomField>