force-app/main/default/objects/Tarea_aprobacion__c/fields/Cliente_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Oportunidad__c</fullName>
    <formula>Opportunity__r.Cliente__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente Oportunidad</label>
    <type>Text</type>
</CustomField>