force-app/main/default/objects/Tarea_aprobacion__c/fields/Codigo_Oportunidad_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Oportunidad_Comercial__c</fullName>
    <formula>Oportunidad__r.Codigo_OC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Oportunidad Comercial</label>
    <type>Text</type>
</CustomField>