force-app/main/default/objects/Tarea_aprobacion__c/fields/Consideraciones_especiales_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Consideraciones_especiales_Oportunidad__c</fullName>
    <formula>Opportunity__r.Consideraciones_especiales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consideraciones especiales Oportunidad</label>
    <type>Text</type>
</CustomField>