force-app/main/default/objects/Tarea_aprobacion__c/fields/Cuenta_lookup__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tareas de aprobación</relationshipLabel>
    <relationshipName>Tareas_de_aprobaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>