force-app/main/default/objects/Tarea_aprobacion__c/fields/Division_Sector_de_Mercado__c.field-meta.xml
<CustomField>
    <fullName>Division_Sector_de_Mercado__c</fullName>
    <formula>Oportunidad__r.Division_literal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>División / Sector de Mercado</label>
    <type>Text</type>
</CustomField>