force-app/main/default/objects/Tarea_aprobacion__c/fields/Equipo_Oferta_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Equipo_Oferta_Objetivo__c</fullName>
    <label>Equipo Oferta Objetivo</label>
    <length>13107</length>
    <type>Html</type>
</CustomField>