force-app/main/default/objects/Tarea_aprobacion__c/fields/Fecha_respuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_respuesta__c</fullName>
    <label>Fecha respuesta</label>
    <type>Date</type>
</CustomField>