force-app/main/default/objects/Tarea_aprobacion__c/fields/Fecha_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Fecha_solicitud__c</fullName>
    <label>Fecha solicitud</label>
    <type>Date</type>
</CustomField>