force-app/main/default/objects/Tarea_aprobacion__c/fields/Forma_de_pago_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago_Oportunidad__c</fullName>
    <formula>TEXT(Oportunidad__r.Forma_de_pago__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forma de pago Oportunidad</label>
    <type>Text</type>
</CustomField>