force-app/main/default/objects/Tarea_aprobacion__c/fields/GIN_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>GIN_Objetivo__c</fullName>
    <label>GIN Objetivo</label>
    <type>TextArea</type>
</CustomField>