force-app/main/default/objects/Tarea_aprobacion__c/fields/Id_Integracion_Portafirmas__c.field-meta.xml
<CustomField>
    <fullName>Id_Integracion_Portafirmas__c</fullName>
    <label>Id Integracion Portafirmas</label>
    <length>64</length>
    <type>Text</type>
</CustomField>