force-app/main/default/objects/Tarea_aprobacion__c/fields/Id_proceso_aprobacion__c.field-meta.xml
<CustomField>
    <fullName>Id_proceso_aprobacion__c</fullName>
    <label>Id proceso aprobacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>