force-app/main/default/objects/Tarea_aprobacion__c/fields/Importe_Extensiones__c.field-meta.xml
<CustomField>
    <fullName>Importe_Extensiones__c</fullName>
    <inlineHelpText>Importe de las extensiones</inlineHelpText>
    <label>Importe Extensiones</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>