force-app/main/default/objects/Tarea_aprobacion__c/fields/Importe_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Importe_Oportunidad__c</fullName>
    <inlineHelpText>Opportunity amounts</inlineHelpText>
    <label>Importe Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>