force-app/main/default/objects/Tarea_aprobacion__c/fields/Importe_total__c.field-meta.xml
<CustomField>
    <fullName>Importe_total__c</fullName>
    <formula>Importe_Oportunidad__c + Importe_Extensiones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>