force-app/main/default/objects/Tarea_aprobacion__c/fields/Importe_total_ofertado_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_ofertado_Oportunidad__c</fullName>
    <formula>Opportunity__r.Importe_total_sin_IVA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe total ofertado Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>