force-app/main/default/objects/Tarea_aprobacion__c/fields/Importe_Total_sin_IVA__c.field-meta.xml
<CustomField>
    <fullName>Importe_Total_sin_IVA__c</fullName>
    <formula>Oportunidad__r.Importe_Licitacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Total (sin IVA) €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>