force-app/main/default/objects/Tarea_aprobacion__c/fields/K_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>K_Oportunidad__c</fullName>
    <formula>Oportunidad__r.K_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% K Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>