force-app/main/default/objects/Tarea_aprobacion__c/fields/Limite_de_responsabilidad_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Limite_de_responsabilidad_Oportunidad__c</fullName>
    <formula>Opportunity__r.Limite_de_responsabilidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Límite de responsabilidad Oportunidad</label>
    <type>Text</type>
</CustomField>