force-app/main/default/objects/Tarea_aprobacion__c/fields/Linea_de_Servicio_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Servicio_Oportunidad__c</fullName>
    <formula>TEXT(Opportunity__r.Linea_de_Servicio__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Línea de Servicio Oportunidad</label>
    <type>Text</type>
</CustomField>