force-app/main/default/objects/Tarea_aprobacion__c/fields/MB_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>MB_Oportunidad__c</fullName>
    <formula>Oportunidad__r.RENTPPTO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MB Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>