force-app/main/default/objects/Tarea_aprobacion__c/fields/Necesidad_de_financiacion_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Necesidad_de_financiacion_Oportunidad__c</fullName>
    <formula>TEXT(Opportunity__r.Necesidad_de_financiacion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Necesidad de financiación Oportunidad</label>
    <type>Text</type>
</CustomField>