force-app/main/default/objects/Tarea_aprobacion__c/fields/Nombre_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Objetivo__c</fullName>
    <label>Nombre Objetivo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>