force-app/main/default/objects/Tarea_aprobacion__c/fields/Nombre_Socio__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Socio__c</fullName>
    <formula>Socio__r.Competidor_Socio__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Socio</label>
    <type>Text</type>
</CustomField>