force-app/main/default/objects/Tarea_aprobacion__c/fields/Nombre_Subcontratacion__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Subcontratacion__c</fullName>
    <formula>Subcontrata__r.Subcontrata__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Subcontratación</label>
    <type>Text</type>
</CustomField>