force-app/main/default/objects/Tarea_aprobacion__c/fields/Objeto_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Objeto_oportunidad__c</fullName>
    <formula>Oportunidad__r.Objeto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objeto oportunidad</label>
    <type>Text</type>
</CustomField>