force-app/main/default/objects/Tarea_aprobacion__c/fields/Oportunidad_Gestion_Curricular__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Gestion_Curricular__c</fullName>
    <formula>Oportunidad__r.Gestion_CV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gestión Curricular</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>