force-app/main/default/objects/Tarea_aprobacion__c/fields/Oportunidad_Subcontrataciones__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Subcontrataciones__c</fullName>
    <formula>IF(ISPICKVAL(Oportunidad__r.Subcontrataciones__c,&apos;No&apos;), &apos;No&apos;, &apos;Sí&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad Subcontrataciones</label>
    <type>Text</type>
</CustomField>