force-app/main/default/objects/Tarea_aprobacion__c/fields/Oportunidad_UTE__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_UTE__c</fullName>
    <formula>IF(ISPICKVAL(Oportunidad__r.Tipo_Participacion_Ayesa__c, &apos;UTE&apos;), &apos;Sí&apos;, &apos;No&apos;  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad UTE</label>
    <type>Text</type>
</CustomField>