force-app/main/default/objects/Tarea_aprobacion__c/fields/Pais_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Pais_Oportunidad__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.Direccion_Operaciones__c,&apos;ENGINEERING&apos;), Opportunity__r.Pais_del_cliente__c, Opportunity__r.Pais_IT_Literal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País Oportunidad</label>
    <type>Text</type>
</CustomField>