force-app/main/default/objects/Tarea_aprobacion__c/fields/Plazo_de_ejecucion_estimado_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Plazo_de_ejecucion_estimado_Oportunidad__c</fullName>
    <formula>Opportunity__r.Plazo_de_ejecuci_n_meses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo de ejecución estimado Oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>