force-app/main/default/objects/Tarea_aprobacion__c/fields/Propietario_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Propietario_Oportunidad__c</fullName>
    <formula>Oportunidad__r.Propietario_custom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario Oportunidad</label>
    <type>Text</type>
</CustomField>