force-app/main/default/objects/Tarea_aprobacion__c/fields/Riesgos_Fundamentales_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Riesgos_Fundamentales_Oportunidad__c</fullName>
    <formula>Oportunidad__r.Riesgos_fundamentales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Riesgos Fundamentales Oportunidad</label>
    <type>Text</type>
</CustomField>