force-app/main/default/objects/Tarea_aprobacion__c/fields/Sector_de_Mercado_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Sector_de_Mercado_Objetivo__c</fullName>
    <label>Sector de Mercado Objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVIATION</fullName>
            </value>
            <value>
                <fullName>BFS</fullName>
            </value>
            <value>
                <fullName>BPO UTILITIES</fullName>
            </value>
            <value>
                <fullName>BUILDING EMEA &amp; ASIA</fullName>
            </value>
            <value>
                <fullName>BUILDING LATAM</fullName>
            </value>
            <value>
                <fullName>BUILDING SPAIN</fullName>
            </value>
            <value>
                <fullName>CONSUMER &amp; BUSINESS SERVICES</fullName>
            </value>
            <value>
                <fullName>DIGITAL ADMINISTRATION</fullName>
            </value>
            <value>
                <fullName>ENEL</fullName>
            </value>
            <value>
                <fullName>ENERGY</fullName>
            </value>
            <value>
                <fullName>ENVIRONMENT</fullName>
            </value>
            <value>
                <fullName>HEALTH</fullName>
            </value>
            <value>
                <fullName>HYDRAULIC WORKS</fullName>
            </value>
            <value>
                <fullName>IBERDROLA</fullName>
            </value>
            <value>
                <fullName>INDUSTRY</fullName>
            </value>
            <value>
                <fullName>INFRA. SUPERVISIONS</fullName>
            </value>
            <value>
                <fullName>INNOVATION</fullName>
            </value>
            <value>
                <fullName>INSURANCE</fullName>
            </value>
            <value>
                <fullName>LAND MANAGEMENT</fullName>
            </value>
            <value>
                <fullName>MARINE &amp; COASTALS</fullName>
            </value>
            <value>
                <fullName>MICROSOFT</fullName>
            </value>
            <value>
                <fullName>OIL &amp; GAS</fullName>
            </value>
            <value>
                <fullName>ONCE</fullName>
            </value>
            <value>
                <fullName>PROCESS PLANTS</fullName>
            </value>
            <value>
                <fullName>RAILWAY/METRO</fullName>
            </value>
            <value>
                <fullName>RAILWAY SYSTEMS</fullName>
            </value>
            <value>
                <fullName>RESOURCES</fullName>
            </value>
            <value>
                <fullName>ROADS</fullName>
            </value>
            <value>
                <fullName>TMT</fullName>
            </value>
            <value>
                <fullName>TRANSPORT. CATALONIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>