force-app/main/default/objects/Tarea_aprobacion__c/fields/Tiene_extensiones_la_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Tiene_extensiones_la_oportunidad__c</fullName>
    <label>Tiene extensiones la oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>