force-app/main/default/objects/Tarea_aprobacion__c/fields/Tipo_de_Negocio_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Negocio_Objetivo__c</fullName>
    <label>Tipo de Negocio Objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Extension</fullName>
            </value>
            <value>
                <fullName>Recurrent Extension</fullName>
            </value>
            <value>
                <fullName>Previous exclusive framework agreement</fullName>
            </value>
            <value>
                <fullName>Previous framework agreement with competitors</fullName>
            </value>
            <value>
                <fullName>New Extension or variation</fullName>
            </value>
            <value>
                <fullName>New exclusive framework agreement</fullName>
            </value>
            <value>
                <fullName>New framework agreement with competitors</fullName>
            </value>
            <value>
                <fullName>New contract being incumbent</fullName>
            </value>
            <value>
                <fullName>New contract</fullName>
            </value>
            <value>
                <fullName>New contract multiyear/multistage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>