force-app/main/default/objects/Tarea_aprobacion__c/fields/Tipologia_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Tipologia_Oportunidad__c</fullName>
    <formula>TEXT(Opportunity__r.Tipologia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipología Oportunidad</label>
    <type>Text</type>
</CustomField>