force-app/main/default/objects/Tarea_aprobacion__c/fields/Volumen_Previsto_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Volumen_Previsto_Objetivo__c</fullName>
    <label>Volumen Previsto Objetivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>