force-app/main/default/objects/Tarea_aprobacion__c/listViews/Tareas_de_aprobaci_n_pendientes.listView-meta.xml
<ListView>
    <fullName>Tareas_de_aprobaci_n_pendientes</fullName>
    <columns>NAME</columns>
    <columns>Cliente_Oportunidad__c</columns>
    <columns>Codigo_Oportunidad_Comercial__c</columns>
    <columns>Tipo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fecha_de_Presentacion_Oportunidad__c</columns>
    <columns>Importe_Total_sin_IVA__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
        <value>En proceso</value>
    </filters>
    <label>Tareas de aprobación pendientes</label>
</ListView>